clusters/hybrid01/config/prometheus/prometheus-istio.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "mtls-mode"
  namespace: "prometheus"
spec:
  mtls:
    mode: PERMISSIVE
