clusters/hybrid01/config/prometheus/prometheus-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
