clusters/hybrid01/config/prometheus/alertmanager-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-external
  namespace: prometheus
spec:
  hosts:
  - "alertmanager.jkulzer.dev"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-alertmanager
        port:
          number: 9093
