clusters/hybrid01/config/prometheus/prometheus-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-external
  namespace: prometheus
spec:
  hosts:
  - "prometheus.jkulzer.dev"
  gateways:
  - istio-internal-gateway/internal-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-prometheus
        port:
          number: 9090
